<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_live"
        android:enabled="true"
        android:icon="@drawable/ic_menu_live"
        android:title="@string/menu_live" />

    <item
        android:id="@+id/page_explore"
        android:enabled="true"
        android:icon="@drawable/ic_menu_explore"
        android:title="@string/menu_explore" />

    <item
        android:id="@+id/page_esports"
        android:enabled="true"
        android:icon="@drawable/ic_menu_esports"
        android:title="@string/menu_esports" />

    <item
        android:id="@+id/page_lounge"
        android:enabled="true"
        android:icon="@drawable/ic_menu_lounge"
        android:title="@string/menu_lounge" />

</menu>