<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:paddingTop="10dp"
    tools:context=".activity.UploadActivity">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="30dp"
        android:contentDescription="@string/ic_close"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_main" />

    <TextView
        style="@style/BoldTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/suggestion_upload"
        app:layout_constraintBottom_toBottomOf="@id/iv_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_close" />

    <ImageView
        android:id="@+id/iv_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="40dp"
        android:contentDescription="@string/img_upload"
        app:layout_constraintBottom_toTopOf="@id/tv_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_close" />


    <TextView
        android:id="@+id/tv_camera"
        style="@style/BoldTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:background="@drawable/container_chip_border"
        android:padding="15dp"
        android:text="@string/btn_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_gallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/tv_gallery"
        style="@style/BoldTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/container_chip_border"
        android:padding="15dp"
        android:text="@string/btn_gallery"
        app:layout_constraintBottom_toBottomOf="@id/tv_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_camera"
        app:layout_constraintTop_toTopOf="@id/tv_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>