<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:paddingTop="10dp"
    tools:context=".SearchActivity">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="30dp"
        android:contentDescription="@string/ic_close"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_main" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/container_round_full_box"
        android:backgroundTint="@color/card_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/iv_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_close"
        app:layout_constraintTop_toTopOf="@id/iv_close">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@drawable/container_round_full_box"
            android:hint="@string/placeholder"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/text_main"
            android:textColorHint="@color/text_aside"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/ic_search"
            android:src="@drawable/ic_search"
            app:tint="@color/text_aside" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>