<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_dark"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_logo"
        android:scaleType="centerInside"
        android:contentDescription="@string/task_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="7dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_search"
        android:contentDescription="search"
        app:layout_constraintTop_toTopOf="@id/btn_notice"
        app:layout_constraintBottom_toBottomOf="@id/btn_notice"
        app:layout_constraintEnd_toStartOf="@id/btn_notice" />

    <ImageButton
        android:id="@+id/btn_notice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="7dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_notice"
        android:contentDescription="notice"
        app:layout_constraintTop_toTopOf="@id/btn_profile"
        app:layout_constraintBottom_toBottomOf="@id/btn_profile"
        app:layout_constraintEnd_toStartOf="@id/btn_profile" />

    <ImageButton
        android:id="@+id/btn_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="7dp"
        android:layout_margin="10dp"
        android:background="@drawable/container_circle"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_anonymous"
        android:contentDescription="profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"
        app:tabPaddingStart="-1dp"
        app:tabPaddingEnd="-1dp"
        app:tabIndicatorColor="@color/primary"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="2dp"
        app:tabTextAppearance="@style/TabLayoutStyle"
        app:tabTextColor="@color/text_aside"
        app:tabSelectedTextColor="@color/primary"
        app:tabRippleColor="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_recommend" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_following" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"

        app:menu="@menu/menu"
        app:labelVisibilityMode="labeled"
        app:itemIconSize="35dp"
        app:itemIconTint="@drawable/menu_color_selector"
        app:itemTextColor="@drawable/menu_color_selector"
        app:itemTextAppearanceInactive="@style/MenuTextStyle"
        app:itemTextAppearanceActive="@style/MenuTextStyle"
        app:itemActiveIndicatorStyle="@null"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>